--- a/details.html
+++ b/details.html
@@ -47,11 +47,11 @@
             <div class="details-container">
               <div class="details-item">
                 <div class="details-box primary">
-                  <h4 class="box-title">STEP 1</h4>
+                  <h4 class="box-title fs-14 fs-1366-12">STEP 1</h4>
 
                   <div class="box-content">
-                    <div class="box-subtitle">Basic Details</div>
-                    <div class="box-text">
+                    <div class="box-subtitle fs-1366-14">Basic Details</div>
+                    <div class="box-text fs-1366-14">
                       Tell us about yourself to understand your interest and
                       choices.
                     </div>
@@ -90,11 +90,11 @@
 
               <div class="details-item">
                 <div class="details-box">
-                  <h4 class="box-title">STEP 2</h4>
+                  <h4 class="box-title fs-14 fs-1366-12">STEP 2</h4>
 
                   <div class="box-content">
-                    <div class="box-subtitle">Bank Details</div>
-                    <div class="box-text">
+                    <div class="box-subtitle fs-1366-14">Bank Details</div>
+                    <div class="box-text fs-1366-14">
                       As per SEBI, it is mandatory for you to add your bank
                       account details.
                     </div>
@@ -148,11 +148,11 @@
               </div>
               <div class="details-item">
                 <div class="details-box">
-                  <h4 class="box-title">STEP 3</h4>
+                  <h4 class="box-title fs-14 fs-1366-12">STEP 3</h4>
 
                   <div class="box-content">
-                    <div class="box-subtitle">Signature</div>
-                    <div class="box-text">
+                    <div class="box-subtitle fs-1366-14">Signature</div>
+                    <div class="box-text fs-1366-14">
                       Your signature should match with your PAN Card’s
                       signature.
                     </div>
