--- a/refer-and-invest.html
+++ b/refer-and-invest.html
@@ -487,11 +487,11 @@
               <div class="text refer">
                 <div class="sub-section referral">
                   <h4 class="text-light-2 fs-1366-14">MY REFERRAL</h4>
-                  <h3 class="fw-normal mt-4 fs-1366-18">
+                  <h3 class="fw-normal mt-3 fs-1366-18">
                     Share Your Promo Code. With A Friend And You Both Get ₹500.
                   </h3>
                 </div>
-                <div class="sub-section">
+                <div class="social-sub-section sub-section">
                   <div class="copy fs-18 fs-1366-14">
                     PALA2389
                     <img
@@ -552,14 +552,14 @@
               </div>
               <div class="text refer">
                 <div class="sub-section form">
-                  <h4 class="text-light-2">LAST REFERRAL</h4>
-                  <h3 class="fs-20 mt-3">ANUJ KATIYAR</h3>
-                  <label class="checkbox-container"
+                  <h4 class="text-light-2 fs-1366-14">LAST REFERRAL</h4>
+                  <h3 class="fs-20 mt-3 fs-1366-16">ANUJ KATIYAR</h3>
+                  <label class="checkbox-container fs-1366-16"
                     >Signed Up
                     <input type="checkbox" checked="checked" />
                     <span class="checkmark"></span>
                   </label>
-                  <label class="checkbox-container mt-4"
+                  <label class="checkbox-container mt-3 fs-1366-16"
                     >Investment
                     <input type="checkbox" />
                     <span class="checkmark"></span>
