--- a/uploading.html
+++ b/uploading.html
@@ -42,16 +42,16 @@
             </div>
           </div>
         </div>
-        <div class="modal-body mt-3">
+        <div class="modal-body mt-sm-3 mt-4">
           <div class="container-fluid">
             <div class="details-container">
               <div class="details-item">
                 <div class="details-box green">
-                  <h4 class="box-title">STEP 1</h4>
+                  <h4 class="box-title fs-14 fs-1366-12">STEP 1</h4>
 
                   <div class="box-content">
-                    <div class="box-subtitle">Basic Details</div>
-                    <div class="box-text">
+                    <div class="box-subtitle fs-1366-14">Basic Details</div>
+                    <div class="box-text fs-1366-14">
                       Tell us about yourself to understand your interest and
                       choices.
                     </div>
@@ -66,11 +66,11 @@
 
               <div class="details-item">
                 <div class="details-box green">
-                  <h4 class="box-title">STEP 2</h4>
+                  <h4 class="box-title fs-14 fs-1366-12">STEP 2</h4>
 
                   <div class="box-content">
-                    <div class="box-subtitle">Bank Details</div>
-                    <div class="box-text">
+                    <div class="box-subtitle fs-1366-14">Bank Details</div>
+                    <div class="box-text fs-1366-14">
                       As per SEBI, it is mandatory for you to add your bank
                       account details.
                     </div>
@@ -83,15 +83,20 @@
                 </div>
               </div>
               <div class="details-item">
-                <div class="details-box primary">
-                  <h4 class="box-title">STEP 3</h4>
+                <div class="details-box green">
+                  <h4 class="box-title fs-14 fs-1366-12">STEP 3</h4>
 
                   <div class="box-content">
-                    <div class="box-subtitle">Signature</div>
-                    <div class="box-text">
+                    <div class="box-subtitle fs-1366-14">Signature</div>
+                    <div class="box-text fs-1366-14">
                       Your signature should match with your PAN Card’s
                       signature.
                     </div>
+                    <img
+                      class="edit"
+                      src="./assets/vector/edit-detail.svg"
+                      alt="edit"
+                    />
                   </div>
                 </div>
               </div>
@@ -128,6 +133,7 @@
             </div>
           </div>
         </div>
+        <button class="bottom-btn btn btn-bg-primary">Continue</button>
       </div>
     </section>
 
