--- a/service.html
+++ b/service.html
@@ -182,7 +182,7 @@
                       for="textdemo1"
                       >Monthly Household Income
 
-                      <div class="custom-tooltip">
+                      <div class="custom-tooltip fs-16 fs-1366-14">
                         Please provide a valid income details more than 2000
 
                         <div class="arrow"></div>
@@ -466,18 +466,16 @@
                         <p>amount needed</p>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
-                        <!-- <a href="#"
+                        <a href="#"
                           ><img src="./assets/images/delete-1.svg" /><img
                             src="./assets/images/delete.svg"
                         /></a>
                         <a href="#"
                           ><img src="./assets/images/edit-1.svg" /><img
                             src="./assets/images/edit.svg"
-                        /></a> -->
-                        <a data-toggle="modal" data-target="#exampleModalx"
-                          ><img
-                            style="opacity: 1"
-                            src="./assets/images/menu.svg"
+                        /></a>
+                        <a class="edit" data-toggle="modal" data-target="#exampleModalx"
+                          ><img src="./assets/images/menu-2.svg"
                         /></a>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p4">
@@ -516,18 +514,17 @@
                         </p>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
-                        <!-- <a href="#" class="removeplnbox"
+                        <a href="#" class="removeplnbox"
                           ><img src="./assets/images/delete-1.svg" /><img
                             src="./assets/images/delete.svg"
                         /></a>
                         <a data-toggle="modal" data-target="#exampleModal"
                           ><img src="./assets/images/edit-1.svg" /><img
                             src="./assets/images/edit.svg"
-                        /></a> -->
-                        <a data-toggle="modal" data-target="#exampleModalx"
-                          ><img
-                            style="opacity: 1"
-                            src="./assets/images/menu.svg"
+                        /></a>
+
+                        <a class="edit" data-toggle="modal" data-target="#exampleModalx"
+                          ><img src="./assets/images/menu-2.svg"
                         /></a>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p4">
@@ -576,18 +573,16 @@
                         <p>dp amount needed</p>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
-                        <!-- <a href="#"
+                        <a href="#"
                           ><img src="./assets/images/delete-1.svg" /><img
                             src="./assets/images/delete.svg"
                         /></a>
                         <a href="#"
                           ><img src="./assets/images/edit-1.svg" /><img
                             src="./assets/images/edit.svg"
-                        /></a> -->
-                        <a data-toggle="modal" data-target="#exampleModalx"
-                          ><img
-                            style="opacity: 1"
-                            src="./assets/images/menu.svg"
+                        /></a>
+                        <a class="edit" data-toggle="modal" data-target="#exampleModalx"
+                          ><img src="./assets/images/menu-2.svg"
                         /></a>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p4">
@@ -622,18 +617,16 @@
                         <p>dp amount needed</p>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
-                        <!-- <a href="#"
+                        <a href="#"
                           ><img src="./assets/images/delete-1.svg" /><img
                             src="./assets/images/delete.svg"
                         /></a>
                         <a href="#"
                           ><img src="./assets/images/edit-1.svg" /><img
                             src="./assets/images/edit.svg"
-                        /></a> -->
-                        <a data-toggle="modal" data-target="#exampleModalx"
-                          ><img
-                            style="opacity: 1"
-                            src="./assets/images/menu.svg"
+                        /></a>
+                        <a class="edit" data-toggle="modal" data-target="#exampleModalx"
+                          ><img src="./assets/images/menu-2.svg"
                         /></a>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p4">
@@ -1381,7 +1374,7 @@
                                   role="tabpanel"
                                   aria-labelledby="nav-home-taby"
                                 >
-                                  <div class="msoinvestproduct_box">
+                                  <!-- <div class="msoinvestproduct_box">
                                     <div class="msoinvestproduct_box_left">
                                       <img
                                         src="./assets/images/bank_logo.svg"
@@ -1437,6 +1430,63 @@
                                         </span>
                                         <span>
                                           <h5>Actual ROI</h5>
+                                          <h3>-</h3>
+                                        </span>
+                                        <span>
+                                          <h5>Frequency</h5>
+                                          <h3><a href="#">MONTHLY</a></h3>
+                                        </span>
+                                      </div>
+                                      <div
+                                        class="msoinvestproduct_box_right_p3"
+                                      >
+                                        <div
+                                          class="
+                                            msoinvestproduct_box_right_p3_s1
+                                          "
+                                        >
+                                          <a href="#"></a>
+                                          <a href="#"></a>
+                                          <a href="#"></a>
+                                          <a href="#"></a>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div> -->
+                                  <div class="msoinvestproduct_box">
+                                    <div class="msoinvestproduct_box_left">
+                                      <img
+                                        src="./assets/images/bank_logo.svg"
+                                      />
+                                    </div>
+                                    <div class="msoinvestproduct_box_right">
+                                      <div
+                                        class="msoinvestproduct_box_right_p1"
+                                      >
+                                        <div
+                                          class="
+                                            msoinvestproduct_box_right_p1_sem1
+                                          "
+                                        >
+                                          <h5>
+                                            Axis banking and financial Services
+                                            growth direct plan
+                                          </h5>
+                                        </div>
+                                      </div>
+                                      <div
+                                        class="msoinvestproduct_box_right_p2"
+                                      >
+                                        <span>
+                                          <h5>Allocation</h5>
+                                          <h3>30%</h3>
+                                        </span>
+                                        <span>
+                                          <h5>Amount</h5>
+                                          <h3>₹9,000</h3>
+                                        </span>
+                                        <span>
+                                          <h5>Gains</h5>
                                           <h3>-</h3>
                                         </span>
                                         <span>
