before changing details page

--- a/details.html
+++ b/details.html
@@ -58,7 +58,7 @@
                   </div>
                 </div>
 
-                <div class="custom-form-control">
+                <div class="custom-form-control half first">
                   <h4 class="text-light-2">PAN</h4>
                   <input
                     class="custom-input"
@@ -68,7 +68,7 @@
                   />
                 </div>
 
-                <div class="custom-form-control">
+                <div class="custom-form-control half second">
                   <h4 class="text-light-2">EMAIL</h4>
                   <input
                     class="custom-input"
@@ -77,7 +77,7 @@
                   />
                 </div>
 
-                <div class="custom-form-control">
+                <div class="custom-form-control half first">
                   <h4 class="text-light-2">DATE OF BIRTH</h4>
                   <input
                     class="custom-input"
@@ -89,7 +89,7 @@
               </div>
 
               <div class="details-item">
-                <div class="details-box">
+                <div class="details-box d-none d-lg-block">
                   <h4 class="box-title fs-14 fs-1366-12">STEP 2</h4>
 
                   <div class="box-content">
@@ -101,7 +101,7 @@
                   </div>
                 </div>
 
-                <div class="custom-form-control">
+                <div class="custom-form-control half second">
                   <h4 class="text-light-2">NAME</h4>
                   <input
                     class="custom-input"
@@ -147,7 +147,7 @@
                 </div>
               </div>
               <div class="details-item">
-                <div class="details-box">
+                <div class="details-box d-none d-lg-block">
                   <h4 class="box-title fs-14 fs-1366-12">STEP 3</h4>
 
                   <div class="box-content">
