--- a/financial-planning.html
+++ b/financial-planning.html
@@ -121,7 +121,7 @@
           </abbr>
 
           <div class="table-container">
-            <table class="mt-5">
+            <table class="mt-5 custom-table">
               <thead>
                 <tr>
                   <th>Goals(s)</th>
