--- a/investment-ready.html
+++ b/investment-ready.html
@@ -25,7 +25,7 @@
     <div id="dark-overlay"></div>
 
     <section id="investment-ready">
-      <div class="custom-modal">
+      <div class="custom-modal bottem-aligned-laptop">
         <div class="close">
           <img src="./assets/images/close.svg" alt="close" />
         </div>
@@ -36,19 +36,19 @@
                 <div class="swiper-slide">
                   <div class="card text-center">
                     <img src="./assets/vector/paperless.svg" alt="paperless" />
-                    <h4>100% Paperless Process</h4>
+                    <h4 class="fs-18 fw-normal mt-2">100% Paperless Process</h4>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="card text-center">
                     <img src="./assets/vector/secure.svg" alt="secure" />
-                    <h4>Secure Data & Money</h4>
+                    <h4 class="fs-18 fw-normal mt-2">Secure Data & Money</h4>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="card text-center no-line">
                     <img src="./assets/vector/quick.svg" alt="quick" />
-                    <h4>Quick Verification</h4>
+                    <h4 class="fs-18 fw-normal mt-2">Quick Verification</h4>
                   </div>
                 </div>
               </div>
@@ -56,19 +56,25 @@
             </div>
 
             <div class="row cards d-none d-md-flex">
-              <div class="col-md-4">
+              <div
+                class="col-md-4 d-flex justify-content-center align-items-end"
+              >
                 <div class="card">
                   <img src="./assets/vector/paperless.svg" alt="paperless" />
                   <h4>100% Paperless Process</h4>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div
+                class="col-md-4 d-flex justify-content-center align-items-end"
+              >
                 <div class="card">
                   <img src="./assets/vector/secure.svg" alt="secure" />
                   <h4>Secure Data & Money</h4>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div
+                class="col-md-4 d-flex justify-content-center align-items-end"
+              >
                 <div class="card no-line">
                   <img src="./assets/vector/quick.svg" alt="quick" />
                   <h4>Quick Verification</h4>
