--- a/profile.html
+++ b/profile.html
@@ -455,7 +455,7 @@
 
       <main id="sidenav-right-content">
         <section id="profile">
-          <div class="container-fluid pt-2 p-0">
+          <div class="container-fluid pt-2 p-sm-0 ps-2">
             <a
               class="d-flex justify-content-start align-items-center my-profile"
               href="./transactions.html"
